--- a/GFModularization-UnityProject/Packages/manifest.json
+++ b/GFModularization-UnityProject/Packages/manifest.json
@@ -8,8 +8,8 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
-    "gameframework.core": "file:E:/WorkSpace/GitReposity/GF/Packages/GF-Core",
-    "gameframework.eventsystem": "file:E:/WorkSpace/GitReposity/GF/Packages/GF-EventSystem",
+    "gameframework.core": "file:../../Packages/GF-Core",
+    "gameframework.eventsystem": "file:../../Packages/GF-EventSystem",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
