--- a/GFModularization-UnityProject/Packages/manifest.json
+++ b/GFModularization-UnityProject/Packages/manifest.json
@@ -11,6 +11,7 @@
     "gameframework.core": "file:../../Packages/GF-Core",
     "gameframework.debugger": "file:E:/WorkSpace/GitReposity/GF/Packages/GF-Debugger",
     "gameframework.eventsystem": "file:../../Packages/GF-EventSystem",
+    "gameframework.objectpoolsystem": "file:E:/WorkSpace/GitReposity/GF/Packages/GF-ObjectPoolSystem",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
