--- a/GFModularization-UnityProject/Packages/manifest.json
+++ b/GFModularization-UnityProject/Packages/manifest.json
@@ -9,9 +9,9 @@
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "gameframework.core": "file:../../Packages/GF-Core",
-    "gameframework.debugger": "file:E:/WorkSpace/GitReposity/GF/Packages/GF-Debugger",
+    "gameframework.debugger": "file:../../Packages/GF-Debugger",
     "gameframework.eventsystem": "file:../../Packages/GF-EventSystem",
-    "gameframework.objectpoolsystem": "file:E:/WorkSpace/GitReposity/GF/Packages/GF-ObjectPoolSystem",
+    "gameframework.objectpoolsystem": "file:../../Packages/GF-ObjectPoolSystem",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
