--- a/GFModularization-UnityProject/Packages/manifest.json
+++ b/GFModularization-UnityProject/Packages/manifest.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.5.7",
+    "com.unity.collab-proxy": "1.7.1",
     "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.8",
+    "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.test-framework": "1.1.24",
+    "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
@@ -12,6 +12,7 @@
     "gameframework.debugger": "file:../../Packages/GF-Debugger",
     "gameframework.eventsystem": "file:../../Packages/GF-EventSystem",
     "gameframework.objectpoolsystem": "file:../../Packages/GF-ObjectPoolSystem",
+    "gameframework.fsmsystem": "file:../../Packages/GF-FsmSystem",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
